--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
     </head>
     <body>
 
-<!-- <button type="button">fever
+<!-- <button type="button">index
     </button> -->
-    <a href="/home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/fever.html">
-    <button>fever
+    <a href="/home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/index.html">
+    <button>index
         </button>
     </a>
 
@@ -47,6 +47,13 @@
 
 
 
+<br><!-- <button type="button">complain
+</button> -->
+<a href="/home/sudo-ranjith/Documents/tests/thrd_ques/candidate-python-exercise-master/complain.html">
+    <button>
+        complain
+    </button>
+</a>
 
 </body>
 </html>
