--- a/stomach.html
+++ b/stomach.html
@@ -11,7 +11,7 @@
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the class teacher.
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;class VIII,
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;government high school.</br>
-        <br>subject:leave applocation for stomach pain.</br>
+        <br>subject:leave application for stomach pain.</br>
         <br>respected madam,
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;since i had severe stomach pain,i was unable to attend the class yesterday.
         <br>kindly excuse my absense and please grant me permission to attend the class<br>from today onwards.
