updated title name in home.html

--- a/home.html
+++ b/home.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title> management system</title>
+        <title>Leave Letter management system</title>
     </head>
     <body>
 
